Fix overlay picture grid
The grid had a very big gap between the rows, if the amount of pictures was too low. It uses now the minimal height for each row.

(cherry picked from commit cfb8bb4b17d62fa88b48b61bf75eb978032a64bf)

--- a/app/assets/stylesheets/alchemy/archive.scss
+++ b/app/assets/stylesheets/alchemy/archive.scss
@@ -125,6 +125,7 @@
 
   display: grid;
   gap: 2 * $default-margin;
+  grid-auto-rows: min-content;
   grid-template-columns: repeat(
     auto-fill,
     minmax(var(--picture-thumbnail-width), auto)
